# DarkThoughtBench

./: Makefile  README.md  pyproject.toml  requirements.txt
DarkBench/: pyproject.toml
DarkBench/reproduce/darkbench/: scorer.py  task.py
darkthoughtbench/: __init__.py  _registry.py  darkbench_deepseek.jsonl  dataset.py  features.py  plots.py  scorer.py  task.py
darkthoughtbench/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
logs/: 2025-04-05T15-34-26+02-00_darkbench_QwJrkQ5jgRMtCe5esTDCw5.eval  2025-04-05T19-34-21+02-00_darkbench_k2PkWfJGDKcW6DtEUCiD5Q.eval  chatgpt_log.json  claude_log.json  confusion_matrices.json  gemini_log.json
notebooks/: CoT_response_consistency.ipynb
notebooks/logs/: confusion_matrices_back.json
notebooks/logs/backups/: claude_log_back.json
reproduce/: README.md  pyproject.toml
reproduce/logs/: chatgpt_log.json  claude_log.json
reproduce/notebooks/: reproduce.ipynb
reproduce/src/: CoT_response_consistency.py  scorer.py
reproduce/src/darkthoughtbench/: scorer.py  task.py
src/: CoT_response_consistency.py  _registry.py  task.py
src/darkthoughtbench/: scorer.py  solver.py  task.py
